--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "password-validate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pierre Studios",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^14.1.0",
+    "@rollup/plugin-typescript": "^8.5.0",
     "@types/react": "^18.0.20",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "rollup": "^2.79.0",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "styled-components": "^5.3.5",
+    "tslib": "^2.4.0",
     "typescript": "^4.8.3"
   }
 }
