--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "@types/jest": "^29.0.3",
     "@types/react": "^18.0.20",
     "@types/styled-components": "^5.1.26",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__react": "^10.2.0",
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
     "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
@@ -44,6 +47,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "styled-components": "^5.3.5",
+    "ts-jest": "^29.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
   }
