--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "styled-components": "^5.3.5",
     "ts-jest": "^29.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "styled-components": "^5.3.5"
   }
 }
