--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "password-validate",
+  "name": "@pierrestudios/password-validate",
   "version": "1.0.0",
   "description": "A component to create a password fields, validate and display an error",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pierrestudios/password-validate"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
@@ -13,6 +21,11 @@
   },
   "author": "Pierre Studios",
   "license": "ISC",
+  "peerDependencies": {
+    "react": ">=16.12.0",
+    "react-dom": ">=16.12.0",
+    "styled-components": "^5.3.5"
+  },
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
@@ -40,8 +53,6 @@
     "babel-loader": "^8.2.5",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "rollup": "^2.79.0",
     "rollup-plugin-dts": "^4.2.2",
@@ -50,8 +61,5 @@
     "ts-jest": "^29.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
-  },
-  "dependencies": {
-    "styled-components": "^5.3.5"
   }
 }
