--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react",
-    "module": "ESNext",  
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "ESNext"
+    ],
+    "jsx": "react-jsx",
+    "target": "es5",  
+    "module": "es2015",  
     "declaration": true,
     "declarationDir": "types",
     "sourceMap": true,
@@ -14,6 +20,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
   },
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "dist",
     "node_modules",
