--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
-  "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/pierrestudios/password-validate"
@@ -53,11 +52,14 @@
     "babel-loader": "^8.2.5",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "rollup": "^2.79.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "styled-components": "^5.3.5",
     "ts-jest": "^29.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
