--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,19 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "ESNext"
-    ],
-    "jsx": "react-jsx",
-    "target": "es5",  
-    "module": "es2015",  
+    "target": "es5",
+    "module": "esnext",
+    "jsx": "react",
     "declaration": true,
-    "declarationDir": "types",
+    "declarationDir": "dist/types",
+    "emitDeclarationOnly": true,
     "sourceMap": true,
     "outDir": "dist",
+    "strict": true,
     "moduleResolution": "node",
-    "emitDeclarationOnly": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "src/**/*.test.tsx",
-    "src/**/*.stories.tsx",
-  ],
+  "include": ["src/components/*.ts", "src/components/**/*.ts", "src/components/**/*.tsx", "src/utils/*.ts", "src/types/*.ts"], 
 }
